objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Existing_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If there is an existing opportunity and a lead comes in on that existing project AM has to choose lead  status "3.2. Rejected - Already Opportunity".</description>
        <label>Existing Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Product_List_Amount__c</fullName>
        <description>Release: P360 March 2013 
Purpose: CCW Field - Store Expected Product List Amount in thousands of the Quote associated with deal which was created from lead</description>
        <label>Expected Product List Amount ($000s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Product__c</fullName>
        <description>NGCC Phase1:Sales History - This field will store the Expected Product List Amount value and show it in the sales history block</description>
        <formula>IF(Expected_Product_List_Amount__c &lt;= 100000,
   TEXT(Expected_Product_List_Amount__c),
   '100K+')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Product List Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Service_List_Amount__c</fullName>
        <description>Release: P360 March 2013 
Purpose: CCW Field - Store Expected Service List Amount in thousands of the Quote associated with deal which was created from lead</description>
        <label>Expected Service List Amount ($000s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Service__c</fullName>
        <description>NGCC Phase1:Sales History - This field will store the Expected Service List Amount value and show it in the sales history block</description>
        <formula>IF(Expected_Service_List_Amount__c &lt;= 100000,
TEXT(Expected_Service_List_Amount__c),
'100K+')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Service List Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Total_List_Amount_000__c</fullName>
        <description>Release: P360 March 2013 
Purpose: CCW Field - Calculates Expected Product + Service  List Amount in thousands of the Quote associated with deal which was created from lead</description>
        <formula>Expected_Product_List_Amount__c +  Expected_Service_List_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Total List Amount ($000s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Lead_ID__c</fullName>
        <description>External System's Lead ID</description>
        <label>External Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Source_Contact_Id__c</fullName>
        <description>NGCC Phase1:External Reference Id of the Prospect</description>
        <externalId>true</externalId>
        <label>External Source Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Approval_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1:Flag to indicate when the first approval received</description>
        <label>First Approval Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Call_Attempt__c</fullName>
        <description>NGCC Phase1:Timestamp when agent attempt first call</description>
        <label>First Call Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Jabber_Call_Start_Date_time__c</fullName>
        <label>First Jabber Call Start Date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Folloze_Board_Name__c</fullName>
        <description>Folloze Board Name</description>
        <label>Folloze Board Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folloze_Board_URL__c</fullName>
        <description>Folloze Board URL</description>
        <label>Folloze Board URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Folloze_Contacted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Folloze Contacted</description>
        <label>Folloze Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folloze_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Folloze Converted</description>
        <label>Folloze Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folloze_Engaged__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Folloze Engaged</description>
        <label>Folloze Engaged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folloze_Score__c</fullName>
        <description>Folloze Score</description>
        <label>Folloze Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folloze_Status_Last_Update__c</fullName>
        <description>Folloze Status Last Update</description>
        <label>Folloze Status Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Folloze_Status__c</fullName>
        <description>Folloze Status</description>
        <label>Folloze Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_ID__c</fullName>
        <description>Reporting field used to track marketing funding information.</description>
        <label>Funding ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <description>Tag to indicate if it is partner-funded, joint-funded campaign. Entered in UNICA tool
Domain values:
CISCO-FUNDED
PARTNER-FUNDED
JOINT-FUNDED</description>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PARTNER-FUNDED</fullName>
                </value>
                <value>
                    <fullName>CISCO-FUNDED</fullName>
                </value>
                <value>
                    <fullName>JOINT-FUNDED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GUTC_COOKIE_ID__c</fullName>
        <description>NGCC Phase1:Sourced from GRS and stores Cookie detail</description>
        <label>GUTC COOKIE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <description>Release: P360 March 2013 
Purpose: Stores the Geo Location of the Lead based on address of the account.</description>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Set to Lead Owners 'Group' field</description>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hard_Bounce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCP Phase1: To indicate if the Lead email was hard bounced</description>
        <label>Invalid Email (Bounced)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Preferred_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the company/lead associated with the lead has a preferred partner or not.</description>
        <label>Has Preferred Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Purchased_From_Cisco_Before__c</fullName>
        <description>Has Purchased From Cisco Before  used in Lead Prioritization</description>
        <label>Has Purchased From Cisco Before</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hyperlink_English__c</fullName>
        <formula>IF(AND(ISBLANK(Account_Name_English__c),ISBLANK(Company)), Id,IF(ISBLANK(Account_Name_English__c),Company,Account_Name_English__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hyperlink English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hyperlink_Non_English__c</fullName>
        <formula>IF(AND(ISBLANK(Account_Name_English__c),ISBLANK(Company)), Id,IF(ISBLANK(Company),Account_Name_English__c,Company))</formula>
        <label>Hyperlink Non English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Age_of_Install_Years_1__c</fullName>
        <description>IB Age of Install</description>
        <label>IB Age of Install (Years)1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Age_of_Install_Years_2__c</fullName>
        <description>IB Age of Install</description>
        <label>IB Age of Install (Years) 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Age_of_Install_Years_3__c</fullName>
        <description>IB Age of Install</description>
        <label>IB Age of Install (Years) 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Chassis_Quantity_1__c</fullName>
        <description>IB Chassis Quantity</description>
        <label>IB Chassis Quantity 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Chassis_Quantity_2__c</fullName>
        <description>IB Chassis Quantity</description>
        <label>IB Chassis Quantity 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Chassis_Quantity_3__c</fullName>
        <description>IB Chassis Quantity</description>
        <label>IB Chassis Quantity 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Contract_Status_1__c</fullName>
        <description>IB Contract Status 1</description>
        <label>IB Contract Status 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Gear</fullName>
                </value>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Uncovered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IB_Contract_Status_2__c</fullName>
        <description>IB Contract Status</description>
        <label>IB Contract Status 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Gear</fullName>
                </value>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Uncovered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IB_Contract_Status_3__c</fullName>
        <description>IB Contract Status</description>
        <label>IB Contract Status 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Gear</fullName>
                </value>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Uncovered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IB_Net_Value_Of_Deal_When_Sold_000_1__c</fullName>
        <description>IB Net Value Of Deal When Sold ($000) 1</description>
        <label>IB Net Value Of Deal When Sold ($000) 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IB_Net_Value_Of_Deal_When_Sold_000_2__c</fullName>
        <description>IB Net Value Of Deal When Sold ($000)</description>
        <label>IB Net Value Of Deal When Sold ($000) 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IB_Net_Value_Of_Deal_When_Sold_000_3__c</fullName>
        <description>IB Net Value Of Deal When Sold ($000)</description>
        <label>IB Net Value Of Deal When Sold ($000) 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IB_Potential_Deal_Value_000_1__c</fullName>
        <description>IB Potential Deal Value ($000)</description>
        <label>IB Potential Deal Value ($000) 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IB_Potential_Deal_Value_000_2__c</fullName>
        <description>IB Potential Deal Value ($000)</description>
        <label>IB Potential Deal Value ($000) 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IB_Potential_Deal_Value_000_3__c</fullName>
        <description>IB Potential Deal Value ($000)</description>
        <label>IB Potential Deal Value ($000) 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IB_Technology_1__c</fullName>
        <description>IB Technology</description>
        <label>IB Technology 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Technology_2__c</fullName>
        <description>IB Technology</description>
        <label>IB Technology 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Technology_3__c</fullName>
        <description>IB Technology</description>
        <label>IB Technology 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_URL_1__c</fullName>
        <description>IB URL 1</description>
        <label>IB URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IB_URL_2__c</fullName>
        <description>IB URL</description>
        <label>IB URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IB_URL_3__c</fullName>
        <description>IB URL</description>
        <label>IB URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IB_URL_To_Portal_1__c</fullName>
        <description>IB URL To Portal</description>
        <label>IB URL To Portal 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IB_URL_To_Portal_2__c</fullName>
        <description>IB URL To Portal</description>
        <label>IB URL To Portal 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IB_URL_To_Portal_3__c</fullName>
        <description>IB URL To Portal</description>
        <label>IB URL To Portal 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Inbound_Program__c</fullName>
        <description>Inbound Program  used in Lead Prioritization</description>
        <label>Inbound Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_Source_ID__c</fullName>
        <description>NGCC Phase1:Unique identifier of record sourced ID provided in 3rd party lead email</description>
        <label>Inbound Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Source__c</fullName>
        <description>NGCC Phase1:3rd Party vendor who sent the email</description>
        <label>Inbound Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infinity_Code__c</fullName>
        <description>NGCC Phase1:Infinity Code associated to Prospect</description>
        <label>Infinity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Partner_Assigned_BEC_ID_PGTMV__c</fullName>
        <description>This field will capture the first Channel Partner assigned to the Lead.</description>
        <label>Initial Partner Assigned BEC ID (PGTMV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Base__c</fullName>
        <description>As part of QW- 5109, field is created for EU and will be mapped to Installed Base in Opportunity.</description>
        <label>Installed Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Install Base Program Driven</fullName>
                </value>
                <value>
                    <fullName>IBLM/Get Refreshed (Product Migration)</fullName>
                </value>
                <value>
                    <fullName>IBLM Service Only Opportunity</fullName>
                </value>
                <value>
                    <fullName>Competitive Takeout (Not IBLM Related)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_With_MCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCP Phase1: To indicate of the Lead is Integrated with MCP Eloqua</description>
        <label>Integrated with Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_with_CCW__c</fullName>
        <formula>IF(NOT(ISBLANK(CCW_Deal_or_Quote_exist__c) ),True,False)</formula>
        <inlineHelpText>This is an Indicator flag, checked automatically if deal has been created from the lead, no action needed.</inlineHelpText>
        <label>Integrated with CCW?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction_Feedback__c</fullName>
        <description>Store the Post chat survey comments</description>
        <label>Interaction Feedback</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction_Rating__c</fullName>
        <description>Store the Post chat survey score</description>
        <label>Interaction Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interests_Networking_Solution__c</fullName>
        <label>Interests Networking Solution</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Call_Script_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC : This field is useful for checking the call script execution process.</description>
        <inlineHelpText>NGCC :This is used by system please do not edit</inlineHelpText>
        <label>Is Call Script Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lead_Partner_Assignment_Same_Day__c</fullName>
        <description>Nov 13 Release: To verify if Created and Partner Assigned Date is almost same</description>
        <formula>If(((Partner_Assigned_Date__c - Lead_Qualified_Date__c )*1440)&gt;0.9,False,True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lead Partner Assignment Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobFunction__c</fullName>
        <description>Job title of the lead assigned by marketing systems.
LTLM integrated field.</description>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Consultant/Contractor</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Finance/Accounting/Legal</fullName>
                </value>
                <value>
                    <fullName>HR/Recruitment</fullName>
                </value>
                <value>
                    <fullName>Journalism</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR/Advertising</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Applications Dev</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Data Center</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Operations</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Security</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Storage</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Telecom</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>Operations/Administration</fullName>
                </value>
                <value>
                    <fullName>Operations/Administration - Security</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Purchasing/Procurement</fullName>
                </value>
                <value>
                    <fullName>Research/Development</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Telephone Management</fullName>
                </value>
                <value>
                    <fullName>Training/Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <description>Job Role used in Lead Prioritization</description>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>CEO/COO/President/GM</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT Applications Director</fullName>
                </value>
                <value>
                    <fullName>IT Applications Manager</fullName>
                </value>
                <value>
                    <fullName>IT Applications Other</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure Director</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure Manager</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure Other</fullName>
                </value>
                <value>
                    <fullName>IT Operations Director</fullName>
                </value>
                <value>
                    <fullName>IT Operations Manager</fullName>
                </value>
                <value>
                    <fullName>IT Operations Other</fullName>
                </value>
                <value>
                    <fullName>IT VP/CTO/CIO/CSO</fullName>
                </value>
                <value>
                    <fullName>Marketing/Sales</fullName>
                </value>
                <value>
                    <fullName>Procurement/Purchasing/Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Other Director</fullName>
                </value>
                <value>
                    <fullName>Other Manager</fullName>
                </value>
                <value>
                    <fullName>Other VP/CXO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDR_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:LDR who is assigned to the lead</description>
        <label>LDR Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedByName__c</fullName>
        <description>Created as part of P360 Sep '12 Release.
Hold the Full Name of the Standard System field  "Last Modified by" for Gadget.</description>
        <formula>LastModifiedBy.FirstName &amp; " " &amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Days__c</fullName>
        <description>number of days past since the last activity on the lead</description>
        <formula>If (LastActivityDate &gt; DATEVALUE(LastModifiedDate) ,Today()-LastActivityDate, Today()-DATEVALUE(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Contacted__c</fullName>
        <description>NGCC Phase1:Date when contact was lasted contacted by CC</description>
        <label>Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Agent_Notes__c</fullName>
        <label>Latest Agent Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Lead_Acceptance_Date__c</fullName>
        <description>Latest Lead Acceptance Date</description>
        <label>Latest Lead Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadScore__c</fullName>
        <description>Indicates the Lead Score assigned by Marketing systems.
LTLM Integrated field</description>
        <label>Lead Score</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Admin_Alias_Email__c</fullName>
        <description>This field is used for  Lead Admin Alias email of countries US/ Canada. NGCC Mapping Object will Lead Admin Email will be updated here in the field.</description>
        <label>Lead Admin Alias Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Admin_Email__c</fullName>
        <description>NGCC Phase1:Lead Admin Email for Approval process</description>
        <label>Lead Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Age_Days__c</fullName>
        <description>Automatically calculates and displays number of days passed since the lead was created.
 ROUND( NOW() - CreatedDate, 0)</description>
        <formula>ROUND( NOW() - Lead_Qualified_Date__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Approval_Role__c</fullName>
        <description>NGCC Phase1:Current Approval Role for routing purpose</description>
        <label>Lead Approval Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assigment_Age__c</fullName>
        <description>Calculates No. days past lead assignment</description>
        <formula>IF(ISNULL(Lead_Assignment_Date__c), 0, Now() - Lead_Assignment_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assignment Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Date__c</fullName>
        <description>Date when lead was assigned to a user.</description>
        <label>Lead Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Cancel_Reason__c</fullName>
        <description>NGCC Phase1:Reason why lead was cancelled by SDR/CCM.  Answer options are Duplicate Lead and Project Cancelled</description>
        <label>Lead Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Cancelled</fullName>
                </value>
                <value>
                    <fullName>Duplicated Lead</fullName>
                </value>
                <value>
                    <fullName>No Requalification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Category__c</fullName>
        <description>Value of the lead_type/lead category. Domain values:
APPOINTMENT
ATTENDEES
DEMO/TRIAL
QUOTE REQUEST
BANT</description>
        <label>Lead Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APPOINTMENT</fullName>
                </value>
                <value>
                    <fullName>ATTENDEES</fullName>
                </value>
                <value>
                    <fullName>BANT</fullName>
                </value>
                <value>
                    <fullName>DEMO/TRIAL</fullName>
                </value>
                <value>
                    <fullName>QUOTE REQUEST</fullName>
                </value>
                <value>
                    <fullName>Hand Raiser</fullName>
                </value>
                <value>
                    <fullName>DEMOS</fullName>
                </value>
                <value>
                    <fullName>TRIALS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Closed_Date__c</fullName>
        <description>Date/Time when the lead was closed.</description>
        <label>Lead Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Prospect associated to existing SFDC Contacts</description>
        <label>Sales Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Lead Contact)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Distributor_Name__c</fullName>
        <description>Based on this disti name we are going to share the lead record in communities.</description>
        <label>Lead From Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Expiration_Date__c</fullName>
        <description>NGCC Phase1:Expiration date the lead should be purged if its sourced from Rented list</description>
        <label>Lead Expiration Date</label>
        <type>Date</type>
    </fields>
</CustomObject>